name:                blast
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Blast
    Blast.Syntax
    Blast.Common.Analyser
    Blast.Slave.Analyser
    Blast.Master.Analyser
    Blast.Master.Optimizer
    Blast.Slave.Optimizer
    Blast.Runner.Local
    Blast.Runner.Simple
    Blast.Runner.CloudHaskell
    Blast.Distributed.Types
    Blast.Distributed.Slave
    Blast.Distributed.Master
  other-modules:
    Blast.Types
  build-depends:       base >= 4.7 && < 5
    , async
    , binary
    , bytestring
    , cereal
    , containers
    , control-bool
    , data-default
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , either
    , hashable
    , lens
    , monad-logger
    , operational
    , random
    , stm
    , syb
    , text
    , transformers
    , unordered-containers
    , vault
    , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

executable blast-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , containers
    , monad-logger
    , operational
    , transformers
    , vault
    , blast
  default-language:    Haskell2010



executable ch-blast
  hs-source-dirs:      app
  main-is:             ChMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , containers
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , monad-logger
    , operational
    , transformers
    , vault
    , blast
  default-language:    Haskell2010



executable kmeans
  hs-source-dirs:      app
  main-is:             KMeans.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , containers
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , monad-logger
    , operational
    , transformers
    , vault
    , vector
    , blast
  default-language:    Haskell2010



executable kmeans2
  hs-source-dirs:      app
  main-is:             KMeans2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , containers
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , monad-logger
    , operational
    , transformers
    , vault
    , vector
    , blast
  default-language:    Haskell2010

test-suite blast-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blast
                     , vector
                     , HUnit
                     , QuickCheck
                     , scientific
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

