name:                blast
version:             0.1.0.0
synopsis:            A distributed computing library
description:         Please see README.md
homepage:            https://github.com/githubuser/blast#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Jean-Christophe Mincke
maintainer:          jeanchristophe.mincke@gmail.com
copyright:           2016 Jean-Christophe Mincke
category:            Distributed computing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Blast
    Blast.Syntax
    Blast.Runner.CloudHaskell
    Blast.Runner.Local
    Blast.Runner.Simple
    Blast.Distributed.Interface
  other-modules:
    Blast.Common.Analyser
    Blast.Distributed.Master
    Blast.Distributed.Slave
    Blast.Distributed.Types
    Blast.Master.Analyser
    Blast.Slave.Analyser
    Blast.Types
  build-depends:       base >= 4.7 && < 5
    , async
    , binary
    , bytestring
    , cereal
    , containers
    , control-bool
    , data-default
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , either
    , hashable
    , lens
    , monad-logger
    , operational
    , random
    , stm
    , syb
    , text
    , transformers
    , unordered-containers
    , vault
    , vector
  default-language:    Haskell2010
  ghc-options:         -Wall



executable simple
  hs-source-dirs:      examples
  main-is:             Simple/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  -Wall
  build-depends:       base
    , cereal
    , containers
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , distributed-static
    , monad-logger
    , operational
    , transformers
    , vault
    , blast
  default-language:    Haskell2010


executable kmeans
  hs-source-dirs:      examples
  main-is:             KMeans/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  -Wall
  build-depends:       base
    , cereal
    , containers
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , distributed-static
    , monad-logger
    , operational
    , transformers
    , vault
    , blast
  default-language:    Haskell2010


executable ch-blast
  hs-source-dirs:      app
  main-is:             ChMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  -Wall
  build-depends:       base
    , cereal
    , containers
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , monad-logger
    , operational
    , transformers
    , vault
    , blast
  default-language:    Haskell2010



executable kmeans
  hs-source-dirs:      app
  main-is:             KMeans.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  -Wall
  build-depends:       base
    , containers
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , monad-logger
    , operational
    , transformers
    , vault
    , vector
    , blast
  default-language:    Haskell2010



executable kmeans2
  hs-source-dirs:      app
  main-is:             KMeans2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  -Wall
  build-depends:       base
    , containers
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , monad-logger
    , operational
    , transformers
    , vault
    , vector
    , blast
  default-language:    Haskell2010



executable wordcount
  hs-source-dirs:      app
  main-is:             WordCount.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
    , bytestring
    , conduit
    , conduit-extra
    , containers
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , monad-logger
    , operational
    , resourcet
    , transformers
    , vault
    , vector
    , blast
  default-language:    Haskell2010


test-suite blast-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blast
                     , vector
                     , HUnit
                     , monad-logger
                     , QuickCheck
                     , scientific
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

