name:                blast
version:             0.1.1.0
synopsis:            A distributed computing library
description:         Please see README.md
homepage:            https://github.com/githubuser/blast#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Jean-Christophe Mincke
maintainer:          jeanchristophe.mincke@gmail.com
copyright:           2016-2017 Jean-Christophe Mincke
category:            Distributed computing
build-type:          Simple

cabal-version:       >=1.10

-- extra-source-files:

source-repository head
  type: git
  location: http://github.com/jcmincke/Blast.git


library
  hs-source-dirs:      src
  exposed-modules:
    Control.Distributed.Blast
    Control.Distributed.Blast.Syntax
    Control.Distributed.Blast.Runner.CloudHaskell
    Control.Distributed.Blast.Runner.Local
    Control.Distributed.Blast.Runner.Simple
    Control.Distributed.Blast.Distributed.Interface
    Control.Distributed.Blast.Distributed.Slave
    Control.Distributed.Blast.Distributed.Types
  other-modules:
    Control.Distributed.Blast.Common.Analyser
    Control.Distributed.Blast.Distributed.Master
    Control.Distributed.Blast.Master.Analyser
    Control.Distributed.Blast.Slave.Analyser
    Control.Distributed.Blast.Types
  build-depends:
    base >= 4.7 && < 5
    , async
    , binary
    , bytestring
    , cereal
    , containers
    , control-bool
    , data-default
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , either
    , hashable
    , lens
    , monad-logger
    , operational
    , random
    , stm
    , syb
    , text
    , transformers
    , unordered-containers
    , vault
    , vector
  default-language:    Haskell2010
  ghc-options:         -Wall




test-suite blast-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blast
                     , vector
                     , HUnit
                     , monad-logger
                     , QuickCheck
                     , scientific
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

