name:                blast-examples
version:             0.1.0.0
synopsis:            A distributed computing library
description:         Please see README.md
homepage:            https://github.com/githubuser/blast#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Jean-Christophe Mincke
maintainer:          jeanchristophe.mincke@gmail.com
copyright:           2016-2017 Jean-Christophe Mincke
category:            Distributed computing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable simple
  hs-source-dirs:      .
  main-is:             Simple/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  -Wall
  build-depends:       base
    , cereal
    , containers
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , distributed-static
    , monad-logger
    , operational
    , transformers
    , vault
    , blast
  default-language:    Haskell2010


executable kmeans
  hs-source-dirs:      .
  main-is:             KMeans/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  -Wall
  build-depends:       base
    , cereal
    , containers
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , distributed-static
    , monad-logger
    , operational
    , random
    , transformers
    , vault
    , blast
  default-language:    Haskell2010


executable wordcount
  hs-source-dirs:      .
  main-is:             WordCount/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
    , bytestring
    , cereal
    , conduit
    , conduit-extra
    , containers
    , deepseq
    , distributed-process
    , distributed-process-client-server
    , distributed-process-extras
    , distributed-process-simplelocalnet
    , distributed-static
    , monad-logger
    , operational
    , resourcet
    , transformers
    , vault
    , vector
    , blast
  default-language:    Haskell2010


